name:              hap
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       True

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                    Hap.Dictionary.Import
                    Hap.Dictionary.Hap
                    Hap.Dictionary.EditHandler
                    Hap.Dictionary.ListHandler
                    Hap.Dictionary.Types
                    Hap.Dictionary.FieldFormI
                    Hap.Dictionary.EDSL
                    Hap.Dictionary.Pager
                    Hap.Dictionary.Utils
                    Settings
                    Settings.StaticFiles
                    Settings.Development
                    -- Foundation_
                    Model
                    Foundation
                    -- Dics
                    Import
                    Handler.Home
                    Handler.List
                    Handler.Edit

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4        && < 1.5
                 , yesod-core                    >= 1.4        && < 1.5
                 , yesod-auth                    >= 1.4        && < 1.5
                 , yesod-static                  >= 1.4        && < 1.5
                 , yesod-form                    >= 1.4        && < 1.5
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 2.1        && < 2.2
                 , persistent-postgresql         >= 2.1        && < 2.2
                 , persistent-template           >= 2.1        && < 2.2
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.1
                 , data-default
                 , aeson                         >= 0.8        && < 0.9
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.3
                 , wai-logger                    >= 2.2        && < 2.3
                 , exceptions                   >=0.6
                 , containers                   >= 0.5
                 , safe                         >= 0.3
                 , old-locale                   >= 1.0
                 , time                         >= 1.4
                 , data-default-generics        >= 0.3
                 , text-format                  >= 0.3
                 , transformers                 >= 0.3

    -- see https://github.com/yesodweb/yesod/issues/814
    if !os(windows)
        build-depends: unix

executable         hap
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , hap
                     , yesod

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , hap
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
